Header: truncate text & fix style.

--- a/frontend/components/StationHeader/StationHeader.module.scss
+++ b/frontend/components/StationHeader/StationHeader.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   margin: 2rem auto;
   padding: 36px;
-  height: 520px;
+  height: 550px;
   background: #FFD9AF;
   border-radius: 25px;
   box-shadow: 1px 2px 18px 0 #0000001A;
@@ -28,7 +28,6 @@
     gap: 0 50px;
     height: 100%;
     z-index: 0;
-    margin-top: 50px;
 
     @include mixinHelper.onTablet{
       flex-direction: column-reverse;
