--- a/frontend/components/StationInformation/StationInformation.module.scss
+++ b/frontend/components/StationInformation/StationInformation.module.scss
@@ -1,8 +1,16 @@
 @use 'styles/mixinHelper';
 
+@mixin truncateText {
+  width: 560px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   max-width: 60%;
 
   @include mixinHelper.onTablet {
@@ -13,6 +21,7 @@
   .station {
 
     &_Name {
+      @include truncateText;
       font-style: normal;
       font-weight: 700;
       font-size: 50px;
