--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -19,6 +19,7 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   vertical-align: baseline;
+  line-height: initial;
 }
 
 article, aside, details, figcaption, figure,
